plugins {
    id 'java-library'
}

dependencies {
    api (
        'commons-codec:commons-codec:1.16.1',
        'com.google.guava:guava:33.0.0-jre',
        'io.dropwizard.metrics:metrics-core:4.2.25',
        'org.slf4j:slf4j-api:2.0.12',
        'com.j256.simplemagic:simplemagic:1.17',
        'javax.annotation:javax.annotation-api:1.3.2',
        'com.github.spotbugs:spotbugs-annotations:4.8.3',
        'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0',
    )

    implementation (
        'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.16.1',
        'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.16.1',
        'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.1',
        'org.apache.commons:commons-compress:1.26.0',
    )

    // this dep is not allowed, as logging depends on common - circle. it works for gradle,
    // but eclipse does not distinguish between real and test dependencies.
    //commonTestDeps(project(":logging"))
}

configurations {
    commonTestDeps.extendsFrom(configurations.implementation)
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
